<resources>
    <string name="app_name">LanguageTranslator</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="fromInst">Translate from \n</string>
    <string name="toInst">\n to \n</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="spanish">Spanish</string>
    <string name="japanese">Japanese</string>
    <string name="phraseInst">\n Choose a phrase to translate: \n</string>
    <string name="translate">Translate!</string>
    <string-array name="fromLanguages">
        <item>English</item>
        <item>French</item>
        <item>Spanish</item>
        <item>Japanese</item>
    </string-array>
    <string-array name="englishPhrases">
        <item>hello</item>
        <item>how much?</item>
        <item>please</item>
        <item>thank you</item>
        <item>goodbye</item>
    </string-array>
    <string-array name="frenchPhrases">
        <item>bonjour</item>
        <item>combien?</item>
        <item>s\'il vous plaît</item>
        <item>merci</item>
        <item>au revoir</item>
    </string-array>
    <string-array name="spanishPhrases">
        <item>hola</item>
        <item>cuánto?</item>
        <item>por favor</item>
        <item>gracias</item>
        <item>adiós</item>
    </string-array>
    <string-array name="japanesePhrases">
        <item>こんにちは</item>
        <item>いくら？</item>
        <item>お願いします</item>
        <item>ありがとう</item>
        <item>さようなら</item>
    </string-array>


</resources>
