<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" tools:context=".MainActivity">

    <TextView android:id="@+id/fromInst"
        android:paddingLeft="20dp"
        android:text="@string/fromInst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Spinner android:id="@+id/fromLanguage"
        android:paddingLeft="20dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content" />
    <TextView android:id="@+id/toInst"
        android:text="@string/toInst"
        android:paddingLeft="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <CheckBox android:id="@+id/toEnglish"
        android:padding="10dp"
        android:text="@string/english"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content" />
    <CheckBox android:id="@+id/toFrench"
        android:padding="10dp"
        android:text="@string/french"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content" />
    <CheckBox android:id="@+id/toSpanish"
        android:padding="10dp"
        android:text="@string/spanish"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content" />
    <CheckBox android:id="@+id/toJapanese"
        android:padding="10dp"
        android:text="@string/japanese"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content" />
    <TextView android:id="@+id/phraseInst"
        android:paddingLeft="20dp"
        android:text="@string/phraseInst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Spinner android:id="@+id/phrase"
        android:paddingLeft="20dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content" />
    <Button android:id="@+id/submitButton"
        android:layout_gravity="center_horizontal"
        android:text="@string/translate"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content" />
    <TextView android:id="@+id/translated"
        android:layout_gravity="center_horizontal"
        android:textColor="#000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</LinearLayout>
